# llm-fusion

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  E.py  F.py  H.py  LICENSE  O.py  README.md  debug_formats.py  debug_hrm.py  model_fusion.py  pyproject.toml  text_completion.py  token_matcher.py
.github/workflows/: ci.yml  pypi-publish.yml
HRM-Text-1B/: README.md  config.json  tokenizer_config.json
Ouro-1.4B/: README.md  config.json  modeling_ouro.py  special_tokens_map.json  tokenizer.json  tokenizer_config.json  vocab.json
docs/: SPEC.md
src/llm_fusion/: __init__.py  __main__.py  benchmark.py  cli.py  fusion.py  generate.py  loader.py  metrics.py  token_matcher.py
tests/: test_benchmark.py  test_cli.py  test_fusion.py  test_generate.py  test_main.py  test_metrics.py  test_token_matcher.py
tools/: release.sh
