[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-fusion"
version = "0.1.0"
description = "Fused autoregressive text completion using Ouro-1.4B + HRM-Text-1B"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Dar\u00edo Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = [
    "tokenizers>=0.20",
]

[project.optional-dependencies]
dev = [
    "hatch",
    "ruff",
    "mypy",
    "pre-commit",
]
test = [
    "pytest",
    "pytest-cov",
    "hypothesis",
]
lint = [
    "prospector[with_ruff,with_mypy]",
    "opengrep",
    "vulture",
    "lizard",
    "mdformat",
]
all = ["llm-fusion[dev,test,lint]"]

[project.scripts]
llm-fusion = "llm_fusion.cli:main"
llm-fusion-benchmark = "llm_fusion.benchmark:main"

[project.urls]
Homepage = "https://github.com/daedalus/LLM_EXPERIMENT"
Repository = "https://github.com/daedalus/LLM_EXPERIMENT"
Issues = "https://github.com/daedalus/LLM_EXPERIMENT/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_fusion"]

[tool.hatch.build.targets.sdist]
include = ["src/llm_fusion"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG", "ANN"]
"src/llm_fusion/generate.py" = ["F821", "F841"]
"src/llm_fusion/benchmark.py" = ["ARG001", "ANN401"]
"src/llm_fusion/metrics.py" = ["ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.prospector]
output-format = "text"
strictness = "medium"
test-warnings = false

[tool.prospector.tools]
ruff = true
mypy = true
pylint = true
pyflakes = false
pycodestyle = false
mccabe = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=50"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
